--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@ div {text-align: center;}
 <body>
  
      
-<div class="" style="background-color:blue;" >
+<div class="" style="background-color:yellow;" >
 <div class="clearfix">
            
 <div class="col-md-12">
@@ -35,7 +35,7 @@ div {text-align: center;}
 
 <div class="login">
 <h2 >To predict whether person survived or not in Titanic Disaster</h2>
-<h4>Developed by Nivesh Soni</h4>
+<h4>Developed by Aarya Sharma</h4>
 <!-- Main Input For Receiving Query to our ML -->
 <form action="{{ url_for('predict')}}"method="get">
 <div class="form-floating mb-3">
