--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@ div {text-align: center;}
 <body>
  
      
-<div class="" style="background-color:yellow;" >
+<div class="" style="background-color:red;" >
 <div class="clearfix">
            
 <div class="col-md-12">
